--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
          function goToAdmin() {
                 const isLocal = window.location.protocol === 'file:';
                 if (isLocal) {
-                  window.location.href = 'E:/register.html/admin.html'; // Локальный путь
+                  window.location.href = 'E:\register.html\admin1.html'; // Локальный путь
                 } else {
                  window.location.href = 'admin.html'; // Относительный путь для GitHub Pages
                 }
