--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
          function goToAdmin() {
                 const isLocal = window.location.protocol === 'file:';
                 if (isLocal) {
-                  window.location.href = 'E:\register.html\admin1.html'; // Локальный путь
+                  window.location.href = 'E:/register.html/admin1.html'; // Локальный путь
                 } else {
-                 window.location.href = 'admin.html'; // Относительный путь для GitHub Pages
+                 window.location.href = 'admin1.html'; // Относительный путь для GitHub Pages
                 }
             }
     </script>
