--- a/Homwork5B.html.html
+++ b/Homwork5B.html.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         if (!localStorage.getItem('username')) {
-            window.location.href = 'E:\register.html\reg3.html';
+            window.location.href = 'E:\register.html\index.html';
         } else {
           document.body.innerHTML = `
              <h1>Главная страница</h1>
